# BookMe

./: .coveragerc  .gitignore  .pylintrc  README.md  calendar.py  manage.py  pyproject.toml  pytest.ini  send_test_invitation.py  send_test_invitation2.py
backup/: event_planner.py  manage.py
backup/bookme/lib/: auth.py
bookme/: asgi.py  settings.py  urls.py  wsgi.py
scheduler/: admin.py  models.py  urls.py  views.py
scheduler/lib/: calendarauth.py  planner.py
scheduler/management/commands/: calendartoken.py
scheduler/migrations/: 0001_initial.py  0002_alter_eventtype_horizon.py  0003_event_booker_name.py  0004_alter_event_booker_name_and_more.py  0005_alter_schedule_options_eventtype_schedule.py  0006_remove_event_event_type_event_description_and_more.py  0007_remove_schedule_sun_time_range_and_more.py  0008_phonenumber_remove_schedule_schedule_name_and_more.py  0009_alter_phonenumber_options_alter_schedule_options_and_more.py
scheduler/templates/scheduler/: booking_form.html  index.html  time_picker.html
scheduler/templates/scheduler/partials/: calendar.html  loading_container.html  time_picker.html
scheduler/tests/: test_models.py
theme/static_src/: package-lock.json  tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
theme/templates/partials/: alert.html  moon-toggle.html  sun-toggle.html
